@@ -1,6 +1,6 @@
 package com.banksolution.account.cmd.infrastructure.transaction;
 
-import com.banksolution.account.cmd.domain.AccountAggregate;
+import com.banksolution.account.cmd.factory.EventModelFactory;
 import com.banksolution.account.cmd.repository.EventStoreRepository;
 import com.banksolution.common.exceptions.AggregateNotFoundException;
 import com.banksolution.common.exceptions.ConcurrencyException;
@@ -11,9 +11,7 @@ import com.banksolution.cqrs.core.producers.EventProducer;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class TransactionEventStore implements EventStore {
@@ -29,32 +27,36 @@ public class TransactionEventStore implements EventStore {
     }
 
     @Override
-    public void save(String aggregateId,
-                     Iterable<BaseEvent> events,
-                     int expectedVersion) {
+    public void save(
+            String aggregateId,
+            Iterable<BaseEvent> events,
+            int expectedVersion) {
 
-        var eventStream = repository.findByAggregateIdentifier(aggregateId);
+        List<EventModel> eventStream = repository.findByAggregateIdentifier(aggregateId);
         if (expectedVersion != -1
                 && eventStream.getLast().getVersion() != expectedVersion) {
             throw new ConcurrencyException();
         }
-        var version = expectedVersion;
-        for (var event : events) {
-            version++;
-            event.setVersion(version);
-            var eventModel =
-                    EventModel.builder()
-                            .timestamp(LocalDateTime.now())
-                            .aggregateIdentifier(aggregateId)
-                            .aggregateType(AccountAggregate.class.getTypeName())
-                            .version(version)
-                            .eventType(event.getClass().getTypeName())
-                            .eventData(event)
-                            .build();
 
-            var persistedEvent = repository.save(eventModel);
+        int version = expectedVersion;
+        for (BaseEvent baseEvent : events) {
+
+            version++;
+            baseEvent.setVersion(version);
+
+            EventModel eventModel = EventModelFactory.getEventModel(
+                    baseEvent,
+                    aggregateId,
+                    version
+            );
+
+            EventModel persistedEvent = repository.save(eventModel);
+
             if (!persistedEvent.getId().isEmpty()) {
-                eventProducer.produce(event.getClass().getSimpleName(), event);
+                eventProducer.produce(
+                        baseEvent.getClass().getSimpleName(),
+                        baseEvent
+                );
             }
         }
     }
@@ -62,18 +64,22 @@ public class TransactionEventStore implements EventStore {
     @Override
     public List<BaseEvent> getEvents(String aggregateId) {
 
-        var eventStream = repository.findByAggregateIdentifier(aggregateId);
+        List<EventModel> eventStream = repository.findByAggregateIdentifier(aggregateId);
         if (eventStream == null || eventStream.isEmpty()) {
             throw new AggregateNotFoundException("Incorrect account ID provided!");
         }
 
-        return eventStream.stream().map(EventModel::getEventData).collect(Collectors.toList());
+        return eventStream.
+                stream()
+                .map(EventModel::getEventData)
+                .toList();
     }
 
     @Override
     public List<String> getAggregateIds() {
 
-        var eventStream = repository.findAll();
+        List<EventModel> eventStream = repository.findAll();
+
         if (eventStream.isEmpty()) {
             throw new IllegalStateException();
         }
@@ -81,6 +87,6 @@ public class TransactionEventStore implements EventStore {
         return eventStream.stream()
                 .map(EventModel::getAggregateIdentifier)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
